public enum ClasificacionDeOrganizacion {
  MINISTERIO, UNIVERSIDAD, ESCUELA, EMPRESA_PRIMARIA, EMPRESA_SECUNDARIA
}
